# agentic-ai-field-notes

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
01-introduction/: 00_Environment_Setup.md
02-gist-of-langchain/: 01_LangChain_Fundamentals.md  02_Chat_Models_Architecture.md  03_LangSmith_Tracing.md
03-gist-of-ai-agents/: 04_AI_Agents_and_Tools.md
04-07-agents-under-the-hood/: 05_ReACT_Architecture.md  06_Agents_Under_The_Hood.md
08-function-calling/: 08_Function_Calling.md
09-gist-of-rag/: 09_RAG_Theory_And_Concepts.md  10_RAG_Implementation.md
10-documentation-assistant/: 11_DocAssistant_Theory_And_Concepts.md  12_DocAssistant_Implementation.md
11-llms-and-prompt-engineering/: 13_LLMs_Prompting_And_Context_Engineering.md
12-llm-apps-in-production/: 14_LLM_Apps_In_Production.md
13-langgraph-fundamentals/: 15_LangGraph_Prerequisites.md  16_LangGraph_Introduction.md  17_LangGraph_Terminology.md
14-reflection-agent/: 18_Reflection_Agent.md
15-reflexion-agent/: 19_Reflexion_Agent.md
16-agentic-rag/: 20_Agentic_RAG.md  21_Agentic_RAG_Implementation.md  22_Production_Optimisation.md
17-introduction-to-mcp/: 23_MCP_Theory_And_Concepts.md
18-prebuilt-mcp-server/: 25_Prebuilt_MCP_Server.md
19-building-mcp-servers-clients/: 26_LangChain_MCP_Adapters_Reference.md  27_Building_MCP_Servers_Clients.md
20-useful-llm-dev-tools/: 28_Useful_LLM_Dev_Tools.md
21-deep-agents/: 29_Deep_Agents_Theory_And_Concepts.md
22-deep-agent-skills/: 31_Deep_Agents_Official_Overview_Reference.md
reference-guides/: Production_Patterns.md  (+2 more)
(+59 files in other folders)
