[project]
name = "akgit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "langchain>=1.3.7",
    "langchain-chroma>=0.2",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=0.4",
    "langsmith>=0.8.14",
    "ollama>=0.6.2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-proto>=1.25",
    "pdf2image>=1.17.0",
    "pymupdf>=1.27.2.3",
    "pyodbc>=5.3.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.45.0",
    "truststore>=0.10.4",
    "urllib3>=2.7.0",
]
